<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>tiltControlWidget</class>
 <widget class="QWidget" name="tiltControlWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>50</width>
    <height>360</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="bSlider" name="speedSlider">
   <property name="geometry">
    <rect>
     <x>-1</x>
     <y>50</y>
     <width>30</width>
     <height>300</height>
    </rect>
   </property>
   <property name="minimum">
    <number>-100</number>
   </property>
   <property name="maximum">
    <number>100</number>
   </property>
   <property name="orientation">
    <enum>Qt::Vertical</enum>
   </property>
  </widget>
  <widget class="bSlider" name="positionSlider">
   <property name="geometry">
    <rect>
     <x>29</x>
     <y>40</y>
     <width>20</width>
     <height>320</height>
    </rect>
   </property>
   <property name="maximum">
    <number>1000</number>
   </property>
   <property name="value">
    <number>200</number>
   </property>
   <property name="orientation">
    <enum>Qt::Vertical</enum>
   </property>
   <property name="invertedAppearance">
    <bool>false</bool>
   </property>
   <property name="invertedControls">
    <bool>false</bool>
   </property>
   <property name="tickPosition">
    <enum>QSlider::TicksBelow</enum>
   </property>
   <property name="tickInterval">
    <number>45</number>
   </property>
  </widget>
  <widget class="QLabel" name="coordLabel">
   <property name="geometry">
    <rect>
     <x>6</x>
     <y>10</y>
     <width>60</width>
     <height>30</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Helvetica</family>
     <pointsize>24</pointsize>
    </font>
   </property>
   <property name="text">
    <string>234</string>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>bSlider</class>
   <extends>QSlider</extends>
   <header location="global">bslider.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
 <designerdata>
  <property name="gridDeltaX">
   <number>10</number>
  </property>
  <property name="gridDeltaY">
   <number>10</number>
  </property>
  <property name="gridSnapX">
   <bool>false</bool>
  </property>
  <property name="gridSnapY">
   <bool>false</bool>
  </property>
  <property name="gridVisible">
   <bool>true</bool>
  </property>
 </designerdata>
</ui>
